--- a/quiz.html
+++ b/quiz.html
@@ -23,7 +23,7 @@
 
     <main>
         <h1>Тақырыпты өткен сон өзіңізді тексеріңіз:</h1>
-        <h2><p>Тестілеу өту үшін <a href="https://example.com/test" class="no-underline">мына жерді басыңыз</a>.</p></h2>
+       <h2><p>Тестілеу өту үшін <a href="https://kahoot.it" class="no-underline">kahoot</a> сайтыңа кіріңіз</p></h2>
     </main>
 </body>
 </html>
