--- a/quiz.html
+++ b/quiz.html
@@ -23,7 +23,8 @@
 
     <main>
         <h1>Тақырыпты өткен сон өзіңізді тексеріңіз:</h1>
-       <h2><p>Тестілеу өту үшін <a href="https://kahoot.it" class="no-underline">kahoot</a> сайтыңа кіріңіз</p></h2>
+        <h2><p>Тестілеу өту үшін <a href="https://kahoot.it" class="no-underline">kahoot</a> сайтыңа кіріңіз</p></h2>
+        <img src="https://github.com/atq2006/homework/blob/main/PHOTO-2024-12-01-13-35-54.jpg?raw=true">
     </main>
 </body>
 </html>
